--- a/src/content/graphos/graphs/updating.mdx
+++ b/src/content/graphos/graphs/updating.mdx
@@ -137,7 +137,7 @@ As an example, the [`@interfaceObject` directive](/federation/federated-types/fe
 
 4. Apply the `@interfaceObject` directive to relevant locations in your subgraph schema.
 
-Because you've already updated your [router](#1-update-your-router) and [build pipeline](#2-update-your-build-pipeline), the next time you deploy your subgraph and publish its schema to GraphOS, every component in your supergraph will be prepared to interact a schema that includes the `@interfaceObject` directive you've added.
+Because you've already updated your [router](#1-update-your-router) and [build pipeline](#2-update-your-build-pipeline), the next time you deploy your subgraph and publish its schema to GraphOS, every component in your supergraph will be prepared to interact with a schema that includes the `@interfaceObject` directive you've added.
 
 ## Why is this update order necessary?
 
