--- a/src/content/graphos/schema/cli-registration.mdx
+++ b/src/content/graphos/schema/cli-registration.mdx
@@ -13,7 +13,7 @@ Whenever you make changes to a graph's schema, you should **publish** those chan
 
 ## Subgraph schemas
 
-Every supergraph in Apollo Studio includes one or more subgraphs. You _individually_ publish each subgraph's schema to Apollo with `rover subgraph publish`:
+Every supergraph in GraphOS includes one or more subgraphs. You _individually_ publish each subgraph's schema to Apollo with `rover subgraph publish`:
 
 ```bash
 rover subgraph publish --schema ./products.graphql --name products docs-example-graph@current
