--- a/src/content/graphos/quickstart/self-hosted.mdx
+++ b/src/content/graphos/quickstart/self-hosted.mdx
@@ -63,7 +63,7 @@ After you create your Apollo account, create your first graph in Apollo Studio b
 
 <ExpansionPanel title="Serverless plans">
 
-1. Go to your organization's **Supergraphs** tab in [Apollo Studio](https://studio.apollographql.com/).
+1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/).
 
     - **If you see this dialog...**
 
@@ -111,9 +111,7 @@ After you create your Apollo account, create your first graph in Apollo Studio b
 
 5. Leave the **Supergraph Pipeline Track** dropdown set to its default value.
 
-Your graph has been created, and your Studio organization now includes a **Classic Graphs** tab in addition to its **Supergraphs** tab.
-
-> Note that the **Supergraphs** tab is only for _cloud_ supergraphs. Your self-hosted supergraphs are under the **Classic Graphs** tab.
+Your graph has been created, and it appears in the **Classic Graphs** section of your **Graphs** tab.
 
 </ExpansionPanel>
 
