--- a/src/content/graphos/routing/cloud-configuration.mdx
+++ b/src/content/graphos/routing/cloud-configuration.mdx
@@ -3,7 +3,7 @@ title: Configuring cloud routing
 description: In Apollo Studio
 ---
 
-After you [create a cloud supergraph](../quickstart/cloud/), you can view and manage its router's configuration from Apollo Studio. Go to the **Settings** page for your variant in Studio, then click the **Cloud Routing** tab:
+After you [create a cloud supergraph](../quickstart/cloud/), you can view and manage its router's configuration from Apollo Studio. Go to the **Settings** page for your variant in Studio, then click the **Cloud Router** tab:
 
 <img
   class="screenshot"
@@ -51,7 +51,7 @@ headers:
 
 ## Router configuration YAML
 
-You can configure certain aspects of your router's behavior in the **Router configuration YAML** section of the **Cloud Routing** tab. Specifically, you can configure:
+You can configure certain aspects of your router's behavior in the **Router configuration YAML** section of the **Cloud Router** tab. Specifically, you can configure:
 
 - [HTTP headers](#http-header-rules) that the router sends to your subgraphs
 - [CORS rules](#cors-settings) for browser-based applications connecting to the router
