--- a/src/content/graphos/routing/self-hosted.mdx
+++ b/src/content/graphos/routing/self-hosted.mdx
@@ -42,7 +42,7 @@ See the instructions for your organization's [plan type](../org/plans/):
 
 <ExpansionPanel title="Serverless plans">
 
-1. Go to your organization's **Supergraphs** tab in [Apollo Studio](https://studio.apollographql.com/).
+1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/).
 
     - **If you see this dialog...**
 
@@ -90,9 +90,7 @@ See the instructions for your organization's [plan type](../org/plans/):
 
 5. Leave the **Supergraph Pipeline Track** dropdown set to its default value.
 
-Your graph has been created, and your Studio organization now includes a **Classic Graphs** tab in addition to its **Supergraphs** tab.
-
-> Note that the **Supergraphs** tab is only for _cloud_ supergraphs. Your self-hosted supergraphs are under the **Classic Graphs** tab.
+Your graph has been created, and it appears in the **Classic Graphs** section of your **Graphs** tab.
 
 </ExpansionPanel>
 
