--- a/src/content/graphos/graphs/overview.mdx
+++ b/src/content/graphos/graphs/overview.mdx
@@ -154,7 +154,7 @@ flowchart LR;
   class clients secondary;
 ```
 
-Your self-hosted router is usually an instance of [the Apollo Router](/router/) (cloud supergraphs use the Apollo Router under the hood).
+Your self-hosted router is an instance of [the Apollo Router](/router/) (cloud supergraphs use the Apollo Router under the hood).
 
 > [See the Apollo Router docs.](/router/)
 
@@ -176,9 +176,10 @@ flowchart LR;
   class clients secondary;
 ```
 
-⚠️ **We strongly recommend _against_ monographs!** A monograph introduces significant technical _and_ logistical scaling issues as more teams contribute to your graph and its schema.
 
-Additionally, a graph router provides more functionality than just support for multiple subgraphs: it also enables powerful features like [`@defer` support](/router/executing-operations/defer-support/) and straightforward [metrics reporting](../metrics/usage-reporting/).
+> ⚠️ **We strongly recommend _against_ monographs!** A monograph introduces significant technical _and_ logistical scaling issues as more teams contribute to your graph and its schema.
+>
+> Additionally, the router provides essential GraphOS functionality beyond support for multiple subgraphs: it also enables powerful features like [`@defer` support](/router/executing-operations/defer-support/) and straightforward [metrics reporting](../metrics/usage-reporting/).
 
 ## Creating graphs
 
@@ -188,7 +189,7 @@ Additionally, a graph router provides more functionality than just support for m
 
 <ExpansionPanel title="Serverless plans">
 
-1. Go to your organization's **Supergraphs** tab in [Apollo Studio](https://studio.apollographql.com/).
+1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/).
 
     - **If you see this dialog...**
 
@@ -239,9 +240,7 @@ Additionally, a graph router provides more functionality than just support for m
 
 5. **If you're creating a self-hosted supergraph,** select the version of Apollo Federation you're using from the **Supergraph Pipeline Track** dropdown.
 
-Your graph has been created, and your Studio organization now includes a **Classic Graphs** tab in addition to its **Supergraphs** tab.
-
-> Note that the **Supergraphs** tab is only for _cloud_ supergraphs. Your self-hosted supergraphs are under the **Classic Graphs** tab.
+Your graph has been created, and it appears in the **Classic Graphs** section of your **Graphs** tab.
 
 Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. For details, see [Publishing schemas to Apollo Studio](../schema/cli-registration).
 
