--- a/src/content/graphos/basics/graphs/updating.mdx
+++ b/src/content/graphos/basics/graphs/updating.mdx
@@ -19,9 +19,9 @@ flowchart LR;
 ```
 
 - **The router** is powered by a particular version of the [Apollo Router](/router/).
-    - This is true for all supergraph types ([cloud](./overview/#cloud-supergraphs) and [self-hosted](./overview/#self-hosted-supergraphs)).
+  - This is true for all supergraph types ([cloud](./overview/#cloud-supergraphs) and [self-hosted](./overview/#self-hosted-supergraphs)).
 - **The GraphOS build pipeline** uses a particular version of Apollo Federation to compose your router's supergraph schema.
-    - If you use the [Rover CLI](/rover/) to compose your supergraph schema, this is true for Rover as well. In this case, you effectively maintain your _own_ build pipeline.
+  - If you use the [Rover CLI](/rover/) to compose your supergraph schema, this is true for Rover as well. In this case, you effectively maintain your _own_ build pipeline.
 - **Your subgraph schemas** might each use special directives that were first introduced in a particular version of Apollo Federation.
 
 These components _each_ target support for a particular version of [Apollo Federation](/federation/), the architecture that underpins every supergraph. Because of this, it's important to make sure these various Federation versions remain compatible with each other as you make updates to individual components.
@@ -45,18 +45,20 @@ graph LR;
 
 The method you use to update your router depends on which type of supergraph you have:
 
- - **If you have a [self-hosted supergraph](./overview/#self-hosted-supergraphs),** you [download the latest Apollo Router binary](/router/quickstart#1-download-and-extract-the-apollo-router-binary) in every environment where your router runs.
+- **If you have a [self-hosted supergraph](./overview/#self-hosted-supergraphs),** you [download the latest Apollo Router binary](/router/quickstart#1-download-and-extract-the-apollo-router-binary) in every environment where your router runs.
 
 - **If you have a [serverless cloud supergraph](./overview/#cloud-supergraphs),** GraphOS _automatically_ updates your router to the latest supported version whenever that version changes.
-    
-    - You can see which Apollo Router version you're running from the **Cloud Router** section of your variant's Settings page in [Studio](https://studio.apollographql.com/):
 
-    <img
-      src="../img/router-status.jpg"
-      class="screenshot"
-      width="200"
-      alt="Router status for cloud supergraph"
-    />
+  - You can see which Apollo Router version you're running from the **Cloud Router** section of your variant's Settings page in [Studio](https://studio.apollographql.com/):
+
+  {' '}
+
+  <img
+    src="../img/router-status.jpg"
+    class="screenshot"
+    width="200"
+    alt="Router status for cloud supergraph"
+  />
 
 For details on each Apollo Router version's corresponding Apollo _Federation_ version, see [this article](/router/federation-version-support#support-table).
 
@@ -70,21 +72,21 @@ Whenever you make an operational change to your graph (such as [publishing chang
 
 1. Go to your variant's Settings page, then find the **General > Build Configuration** section.
 
-    <img
-      src="../img/graph-build-configuration.jpg"
-      class="screenshot"
-      width="500"
-      alt="Build configuration settings in Studio"
-    />
+   <img
+     src="../img/graph-build-configuration.jpg"
+     class="screenshot"
+     width="500"
+     alt="Build configuration settings in Studio"
+   />
 
 2. Click **Edit Configuration**. The following dialog appears:
 
-    <img
-      src="../img/update-build-configuration.jpg"
-      class="screenshot"
-      width="600"
-      alt="Build configuration dialog in Studio"
-    />
+   <img
+     src="../img/update-build-configuration.jpg"
+     class="screenshot"
+     width="600"
+     alt="Build configuration dialog in Studio"
+   />
 
 3. Select a Federation version from the **Supergraph Pipeline Track** dropdown and click **Save**.
 
@@ -123,17 +125,19 @@ After both your [router](#1-update-your-router) _and_ your [build pipeline](#2-u
 As an example, the [`@interfaceObject` directive](/federation/federated-types/federated-directives#interfaceobject) was first introduced in Federation 2.3. To start using this directive in a subgraph, do the following:
 
 1. Make sure your chosen subgraph library has added support for the `@interfaceObject` directive by consulting [this table](/federation/building-supergraphs/supported-subgraphs/).
-    - If your library _doesn't_ yet support the directive, reach out to its maintainers about adding support.
+   - If your library _doesn't_ yet support the directive, reach out to its maintainers about adding support.
 2. Upgrade to the latest version of your subgraph library to make sure you're using a version that supports `@interfaceObject`.
 3. Modify the following `@link` directive in your subgraph schema (or add it if it isn't present yet):
 
-    ```graphql
-    extend schema
-      @link(url: "https://specs.apollo.dev/federation/v2.3",
-            import: ["@key", "@shareable", "@interfaceObject"])
-    ```
+   ```graphql
+   extend schema
+     @link(
+       url: "https://specs.apollo.dev/federation/v2.3"
+       import: ["@key", "@shareable", "@interfaceObject"]
+     )
+   ```
 
-    Notice that the `url` argument targets `v2.3` of the Apollo Federation spec, and `@interfaceObject` is included in the `import` list.
+   Notice that the `url` argument targets `v2.3` of the Apollo Federation spec, and `@interfaceObject` is included in the `import` list.
 
 4. Apply the `@interfaceObject` directive to relevant locations in your subgraph schema.
 
@@ -145,12 +149,12 @@ GraphOS supergraphs use the [Apollo Federation 2](/federation/) architecture. Fe
 
 - Each version of the Apollo Router is compiled against a particular version of Federation 2 (for details, [see this table](/router/federation-version-support)). Any given router version is backward compatible with _previous_ versions of Federation. However, it _isn't_ compatible with _newer_ versions.
 
-    Therefore, it's important to update your router _first_, before any _other_ supergraph component begins using a later Federation 2 version. Otherwise, you might cause your router to break by providing it a supergraph schema that it doesn't support.
+  Therefore, it's important to update your router _first_, before any _other_ supergraph component begins using a later Federation 2 version. Otherwise, you might cause your router to break by providing it a supergraph schema that it doesn't support.
 
 - Your graph's **Supergraph Pipeline Track** setting in Apollo Studio determines which version of Federation 2 is used to compose your supergraph schema. This composition process fails if one of your subgraph schemas uses a directive that was introduced in a Federation version later than your chosen pipeline track.
 
-    - In the case of a failed build, GraphOS continues to provide your router with the supergraph schema from the most recent _successful_ build.
+  - In the case of a failed build, GraphOS continues to provide your router with the supergraph schema from the most recent _successful_ build.
 
 - Finally, subgraph schemas are where you _actually apply_ new Federation 2 directives. You need to update your subgraph library to a version that recognizes all directives that you use in your schema.
 
-    You perform this update _last_ to make sure that every other component of your supergraph is prepared to interact with any newly introduced directives.
+  You perform this update _last_ to make sure that every other component of your supergraph is prepared to interact with any newly introduced directives.
