--- a/src/content/graphos/explorer/embed-explorer.mdx
+++ b/src/content/graphos/explorer/embed-explorer.mdx
@@ -409,9 +409,7 @@ initialState: {
 </td>
 <td>
 
-The id of a collection, paired with an operation id to populate in the Explorer on load.
-You can find these values in your Studio Explorer by clicking on the ... next to an operation
-you want to embed & selecting 'Copy operation & collection ids'.
+The ID of a collection, paired with an operation ID to populate in the Explorer on load. You can find these values in your Studio Explorer by clicking the **...** menu next to an operation you want to embed and selecting **Copy operation & collection ids**.
 
 Example:
 
