--- a/src/content/graphos/explorer/embed-explorer.mdx
+++ b/src/content/graphos/explorer/embed-explorer.mdx
@@ -409,7 +409,7 @@ initialState: {
 </td>
 <td>
 
-The ID of a collection, paired with an operation ID to populate in the Explorer on load. You can find these values in your Studio Explorer by clicking the **...** menu next to an operation you want to embed and selecting **Copy operation & collection ids**.
+The ID of a collection, paired with an operation ID to populate in the Explorer on load. You can find these values in your Studio Explorer by clicking the **...** menu next to an operation you want to embed and selecting **View operation details**.
 
 Example:
 
