--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -343,7 +343,7 @@ These are the fields you can include in the `initialState` option you pass to `n
 
 By default, the embedded Sandbox does not show the **Include cookies** toggle in its connection settings.
 
-You can set `includeCookies` to `true` if you instead want the Sandbox to pass `{ credentials: 'include' }` for its requests.
+Set this value to `true` if you want the Sandbox to pass `{ credentials: 'include' }` for its requests by default.
 
 If you pass `hideCookieToggle` to true, users will default to your setting for `includeCookies`, but will be able to toggle this on and off.
 
