--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -495,7 +495,7 @@ initialState: {
 </td>
 <td>
 
-These headers are not editable by users of this Sandbox, and they are applied to every tab your users open. Users can choose to uncheck them.
+Headers that are applied by default to every operation executed by the embedded Sandbox. Users can disable the application of these headers, but they can't modify their values.
 
 These are the only headers that will apply to your introspection query in Sandbox.
 
