--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -497,7 +497,7 @@ initialState: {
 
 Headers that are applied by default to every operation executed by the embedded Sandbox. Users can disable the application of these headers, but they can't modify their values.
 
-These are the only headers that will apply to your introspection query in Sandbox.
+The embedded Sandbox _always_ includes these headers in its introspection queries to your `initialEndpoint`.
 
 Example:
 
