Fix code snippet

--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -62,8 +62,7 @@ If `Query.books` returns a list of ten `Book` objects, then `Book.title` is reso
 
 Let's say a client executes the following query one time:
 
-```
-graphql
+```graphql
 query GetTwoBooks {
   firstBook: book(id: "123") {
     title
