add endpointIsEditable to docs

--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -280,6 +280,22 @@ Set `hideCookieToggle` to `false` to enable users of your embedded Sandbox insta
 <tr>
 <td>
 
+##### `endpointIsEditable`
+
+`boolean`
+
+</td>
+<td>
+
+By default, the embedded Sandbox has a url input box that is editable by users.
+
+Set `endpointIsEditable` to `false` to disable users of your embedded Sandbox instance from changing the endpoint url.
+</td>
+</tr>
+
+<tr>
+<td>
+
 ##### `includeCookies`
 
 `boolean`
