--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -287,7 +287,7 @@ Set `hideCookieToggle` to `false` to enable users of your embedded Sandbox insta
 </td>
 <td>
 
-By default, the embedded Sandbox has a url input box that is editable by users.
+By default, the embedded Sandbox has a URL input box that is editable by users.
 
 Set `endpointIsEditable` to `false` to disable users of your embedded Sandbox instance from changing the endpoint url.
 </td>
