--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -289,7 +289,7 @@ Set `hideCookieToggle` to `false` to enable users of your embedded Sandbox insta
 
 By default, the embedded Sandbox has a URL input box that is editable by users.
 
-Set `endpointIsEditable` to `false` to disable users of your embedded Sandbox instance from changing the endpoint url.
+Set `endpointIsEditable` to `false` to prevent users of your embedded Sandbox instance from changing the endpoint URL.
 </td>
 </tr>
 
