Update technote tags, remove best-practices

--- a/src/content/technotes/TN0002-schema-naming-conventions.mdx
+++ b/src/content/technotes/TN0002-schema-naming-conventions.mdx
@@ -2,7 +2,7 @@
 title: Schema naming conventions
 id: TN0002
 description: Conventions for types, fields, and arguments
-tags: [schema design]
+tags: [schema-design]
 ---
 
 ## High-level guidance
