--- a/src/content/technotes/TN0008-production-readiness-checklist.mdx
+++ b/src/content/technotes/TN0008-production-readiness-checklist.mdx
@@ -1,7 +1,7 @@
 ---
 title: Production readiness checklist
 id: TN0008
-tags: [server, sre, client, best practices]
+tags: [server, sre, client]
 ---
 
 We recommend that you complete this checklist before your supergraph begins handling production traffic from clients.
