--- a/src/content/technotes/TN0016-router-resource-management.mdx
+++ b/src/content/technotes/TN0016-router-resource-management.mdx
@@ -1,7 +1,7 @@
 ---
 title: Managing Apollo Router resources in Kubernetes
 id: TN0016
-tags: [router, best practices, kubernetes]
+tags: [router, kubernetes]
 ---
 
 > Self-hosting the Apollo Router is limited to Apollo Enterprise plans. Other plan types use [managed cloud routing with GraphOS](/graphos/routing/cloud/).
