--- a/src/content/technotes/TN0018-aggregating-across-subgraphs.mdx
+++ b/src/content/technotes/TN0018-aggregating-across-subgraphs.mdx
@@ -1,7 +1,7 @@
 ---
 title: Aggregating data across subgraphs
 id: TN0018
-tags: [federation, best practices]
+tags: [federation]
 ---
 
 A supergraph helps you orchestrate data fetches across multiple domains, however it _doesn't_ automatically solve some commonly encountered problems in distributed architectures:
