--- a/src/content/technotes/TN0024-deprecations.mdx
+++ b/src/content/technotes/TN0024-deprecations.mdx
@@ -1,7 +1,7 @@
 ---
 title: Schema deprecations
 id: TN0024
-tags: [schema design, best practices]
+tags: [schema-design]
 ---
 
 ## Leverage SDL and tooling to manage deprecations
