--- a/src/content/technotes/TN0028-change-management.mdx
+++ b/src/content/technotes/TN0028-change-management.mdx
@@ -1,7 +1,7 @@
 ---
 title: Deploying API changes with Managed Federation and GraphOS
 id: TN0028
-tags: [federation, best practices]
+tags: [federation]
 ---
 
 A federated GraphQL API is a multi-tiered architecture made up of independent components. GraphQL requests flow through multiple components to construct a response, which in turn flow back through those same components to create a response to send back to the caller, as illustrated below:
