--- a/src/content/technotes/TN0029-relay-style-connections.mdx
+++ b/src/content/technotes/TN0029-relay-style-connections.mdx
@@ -1,7 +1,7 @@
 ---
 title: Relay-style connections and pagination FAQ
 id: TN0029
-tags: [best practices, schema design]
+tags: [best-practices, schema-design]
 ---
 
 [Relay](https://relay.dev) is an opinionated GraphQL client, and its associated [Connections specification](https://relay.dev/graphql/connections.htm) defines a pattern for expressing one-to-many relationships in a GraphQL schema:
