--- a/src/content/technotes/TN0031-graph-identities.mdx
+++ b/src/content/technotes/TN0031-graph-identities.mdx
@@ -1,7 +1,7 @@
 ---
 title: Graph Identities
 id: TN0031
-tags: [best practices, schema design]
+tags: [schema-design]
 ---
 
 The purpose of this technote is to demonstrate queries/mutations for identifying an actor attempting to use the graph. These examples can be useful for inspiring how the actor identity may be described in a GraphQL Schema and includes multiple use-cases for both users and services.
