--- a/src/content/technotes/TN0032-sdui-and-graphql.mdx
+++ b/src/content/technotes/TN0032-sdui-and-graphql.mdx
@@ -1,7 +1,7 @@
 ---
 title: Server-Driven UI and GraphQL
 id: TN0032
-tags: [schema design, server-driven ui]
+tags: [schema-design, server-driven-ui]
 ---
 
 
@@ -64,7 +64,7 @@ query FeaturedProductsCollection {
     }
     ... on ProductsCarousel {
       products {
-        ...productFields			
+        ...productFields
       }
     }
     ... on ProductsError {
