--- a/src/content/technotes/TN0012-namespacing-by-separation-of-concern.mdx
+++ b/src/content/technotes/TN0012-namespacing-by-separation-of-concern.mdx
@@ -1,7 +1,7 @@
 ---
 title: Namespacing by separation of concerns
 id: TN0012
-tags: [schema design, best practices]
+tags: [schema-design]
 ---
 
 Most GraphQL APIs provide their capabilities as root-level fields of the `Query` and `Mutation` types, resulting in a flat structure. For example, the GitHub GraphQL API has approximately 200 of these root-level fields! Even with tools like the Apollo Explorer, navigating and understanding larger "flat" graphs can be difficult.
@@ -87,13 +87,13 @@ Unlike all other fields in a GraphQL operation, the root-level fields of the `Mu
 
 ```graphql
 mutation DoTwoThings {
-  one { 
-    success 
+  one {
+    success
   }
   # The `two` field is not resolved until after `one` is resolved.
   # It is not resolved at all if resolving `one` results in an error.
-  two { 
-    success 
+  two {
+    success
   }
 }
 ```
