--- a/src/content/technotes/TN0014-contracts-patterns.mdx
+++ b/src/content/technotes/TN0014-contracts-patterns.mdx
@@ -1,7 +1,7 @@
 ---
 title: Contracts usage patterns
 id: TN0014
-tags: [contracts, best practices]
+tags: [contracts, schema-design]
 ---
 
 [Contracts](/graphos/delivery/contracts/) enable teams to contribute to a single unified graph while also delivering use-case-specific schemas to different types of consumers. Graph administrators define filter rules to generate **contract schemas** that are a strict subset of the source supergraph.
