--- a/src/content/technotes/TN0017-interfaces.mdx
+++ b/src/content/technotes/TN0017-interfaces.mdx
@@ -1,7 +1,7 @@
 ---
 title: Recommended usage for GraphQL interfaces
 id: TN0017
-tags: [schema design, federation]
+tags: [schema-design, federation]
 ---
 
 GraphQL interfaces enable schema fields to return one of multiple object types, all of which must _implement_ that interface. To implement an interface, an object type must define all fields that are included in that interface (otherwise, the schema is invalid):
