--- a/src/content/technotes/TN0023-nullability.mdx
+++ b/src/content/technotes/TN0023-nullability.mdx
@@ -1,7 +1,7 @@
 ---
 title: Nullability
 id: TN0023
-tags: [schema design, federation]
+tags: [schema-design, federation]
 ---
 
 ## Make intentional choices about nullability
