--- a/src/content/technotes/TN0026-thinking-in-entities.mdx
+++ b/src/content/technotes/TN0026-thinking-in-entities.mdx
@@ -1,7 +1,7 @@
 ---
 title: Thinking in entities
 id: TN0026
-tags: [federation, schema design]
+tags: [federation, schema-design]
 ---
 
 ## Thinking entities
