--- a/src/content/technotes/TN0027-demand-oriented-schema-design.mdx
+++ b/src/content/technotes/TN0027-demand-oriented-schema-design.mdx
@@ -1,7 +1,7 @@
 ---
 title: Demand oriented schema design
 id: TN0027
-tags: [federation, schema design]
+tags: [federation, schema-design]
 ---
 
 ## Design schemas in a demand-oriented, abstract way
