update referenced property from table

--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -208,7 +208,7 @@ If you have a [federated graph](https://apollographql.com/docs/federation), your
 
 To report metrics for field executions, your GraphQL server can run any recent version of Apollo Server 2.x or 3.x.
 
-If you have a [federated graph](https://apollographql.com/docs/federation), your subgraphs must support federated tracing. For compatible libraries, see the **FTV1** column of [this table](/federation/building-supergraphs/supported-subgraphs/).
+If you have a [federated graph](https://apollographql.com/docs/federation), your subgraphs must support federated tracing. For compatible libraries, see the `FEDERATED_TRACING` property of [this table](/federation/building-supergraphs/supported-subgraphs/).
 
 > If _some_ of your subgraphs support federated tracing and others _don't_, only field executions in compatible subgraphs are reported to Apollo.
 
